ash-cli/tests/snapshots/real/02-terminal/announcement-inline.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---












    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   openai-compatible/ash-real-scenario
  ▝▜████▛▘   <FIXTURE>/workspace
    ▝  ▘

  公告：运行 ash update 升级：ANNOUNCEMENT-PTY。









────────────────────────────────────────────────────────────────────────────────────────────────────
> Keep this draft
────────────────────────────────────────────────────────────────────────────────────────────────────
  ash-real-scenario
  ⏸ 手动
