ash-cli/tests/snapshots/real/02-terminal/collaboration-shortcuts.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

























                                                                                  Next mode: Debug
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > BOUND-DRAFT
  ─────────────────────────────────────────────────────────────────────── Automatic model · Debug

  Enter send  ·  / commands
