ash-cli/tests/snapshots/real/02-terminal/effort-highest-boundary.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]


























  ────────────────────────────────────────────────────────────────────────────────────────────────
  > BOUND-DRAFT-AT-MAX
  ────────────────────────────────────────────────────────────────────────────── GPT-6 Luna (max)

  Enter send  ·  / commands
