ash-cli/tests/snapshots/real/02-terminal/effort-shortcut.snap
---
source: ash-cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]


























  ────────────────────────────────────────────────────────────────────────────────────────────────
  > BOUND-DRAFT
  ──────────────────────────────────────────────────────────────────────────── GPT-6 Luna (xhigh)

  Enter send  ·  / commands
